# cyberpunk2077ai

./: Cargo.toml  LICENSE  README.md
reds/: CyberAI.reds
src/: lib.rs  open_ai.rs
src/open_ai/: chat_completions.rs  core.rs  settings.rs
